# godot_json_schema

./: .gitignore  Cargo.toml  README.md  person.gd  project.godot  rust.gdextension  schema_tester.gd  schema_tester.tscn
godot/: fact.gd  person.gd  project.godot  properties_printer.gd  properties_printer.tscn  rust.gdextension  schema_tester.gd
src/: lib.rs
src/schema/: builder.rs  godot_schema.rs  mod.rs
src/schema/definition/: json_conversion.rs  macros.rs  mod.rs  variant.rs
src/schema/type_resolving/: mod.rs  property_wrapper.rs  utils.rs
src/schema/types/: array.rs  j_enum.rs  mod.rs  object.rs  primitives.rs  reference.rs  root_schema.rs  shared_impls.rs  tuple.rs
src/schema/types/godot_class/: base.rs  cached.rs  godot_schema.rs  id.rs  mod.rs  root_schema.rs  source.rs
